examples/test/testpolicy13930.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13930
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key20: value2
      key38: value49
      key25: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value11
          key11: value5
          key33: value28
      podSelector:
        matchLabels:
          key4: value1
          key39: value12
          key1: value25
